lesson 7: cleaned the code